third_party/cuda-oxide/crates/cuda-device/tests/compile_fail/thread_index_runtime_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_index_runtime_mismatch.rs:11:25
   |
11 |     let _ = out.get_mut(idx);
   |                 ------- ^^^ expected `ThreadIndex<'_, Index2D<100>>`, found `ThreadIndex<'_, Runtime2DIndex>`
   |                 |
   |                 arguments to this method are incorrect
   |
   = note: expected struct `ThreadIndex<'_, Index2D<100>>`
              found struct `ThreadIndex<'_, Runtime2DIndex>`
note: method defined here
  --> src/disjoint.rs
   |
   |     pub fn get_mut<'kernel>(&mut self, idx: ThreadIndex<'kernel, IndexSpace>) -> Option<&mut T> {
   |            ^^^^^^^
